local file update

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-modernist
 title: Welcome to Jim Beck's Academic and Project Website
 description: A website to demonstrate academically driven projects in Mathematical and Computational Biology
