--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+name: Jim Beck, Ph.D Student
 theme: jekyll-theme-modernist
 title: Welcome to Jim Beck's Academic and Project Website
 description: A website to demonstrate academically driven projects in Mathematical and Computational Biology
